# rocket-diesel-sample

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2020-08-19-105518_workloads/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
